--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.19.2",
+    "@blocknote/mantine": "^0.19.2",
+    "@blocknote/react": "^0.19.2",
     "@clerk/nextjs": "^6.5.1",
+    "@liveblocks/client": "^2.12.2",
+    "@liveblocks/react": "^2.12.2",
+    "@liveblocks/yjs": "^2.12.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
@@ -22,7 +28,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-firebase-hooks": "^5.1.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yjs": "^13.6.20"
   },
   "devDependencies": {
     "@types/node": "^20",
