--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
     "lucide-react": "^0.461.0",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
@@ -32,13 +32,13 @@
     "yjs": "^13.6.20"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22.10.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
